# httrace

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  fly.toml  pyproject.toml
backend/: .env.example  database.py  main.py  models.py  requirements.txt
backend/billing/: models.py  stripe_webhooks.py  usage.py
backend/generator/: pytest_writer.py
backend/pipeline/: chain_analysis.py  deduplication.py  state_inferrer.py
backend/routes/: generate.py  ingest.py  waitlist.py
demo/: test-shop-app.py  test_httrace.py
docs/: api-reference.md  sdk-configuration.md  troubleshooting.md
landing/: _redirects  contact.html  dashboard.html  index.html  llms.txt  robots.txt  sitemap.xml
landing/docs/: index.html
reqsnap/: __init__.py  client.py  middleware.py
sdk-go/: go.mod  httrace.go  httrace_test.go
sdk-node/: package.json
sdk-node/src/: index.js
sdk-node/test/: middleware.test.js
sdk-ruby/lib/: httrace.rb
sdk-ruby/test/: middleware_test.rb
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: api.ts  coverage-tree.ts  coverageProvider.ts  extension.ts
vscode-extension/src/commands/: diff.ts  generate.ts  replay.ts
vscode-extension/src/decorations/: coverage.ts
