[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqsnap"
version = "0.1.0"
description = "Capture production traffic. Generate integration tests automatically."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "fastapi", "httpx", "starlette"]

[project.urls]
Homepage = "https://reqsnap.io"
Repository = "https://github.com/reqsnap/reqsnap-python"
